--- a/Exercise-9/style.css
+++ b/Exercise-9/style.css
@@ -6,7 +6,8 @@
     display:flex;
     flex-direction: column;
     font-size: 16px;
-    width: 25vw;
+    
+    min-width: 40ch
     
 }
 
@@ -61,17 +62,22 @@ img{
 #location{
     font-size: 0.7em;
 }
-
+@media (min-width: 768px){
+    .card{
+        width: 30vw;
+    }
+}
 
 @media (max-width: 768px){
     .card{
-        width: 40vw;
+        min-width: 40ch;
+        width:70vw;
     }
 }
 
 @media (max-width: 375px){
     .container{
-        width:80vw;
+        width:60vw;
     }
 }
 
