--- a/Exercise-9/style.css
+++ b/Exercise-9/style.css
@@ -7,7 +7,7 @@
     flex-direction: column;
     font-size: 16px;
     
-    min-width: 40ch
+    
     
 }
 
@@ -64,20 +64,22 @@ img{
 }
 @media (min-width: 768px){
     .card{
-        width: 30vw;
+        max-width: 20%;
+        min-width: 250px;
     }
 }
 
 @media (max-width: 768px){
     .card{
-        min-width: 40ch;
-        width:70vw;
+        min-width:250px;
+        max-width: 300px;
     }
 }
 
 @media (max-width: 375px){
-    .container{
-        width:60vw;
+    .card{
+        min-width:200px;
+        max-width: 300px;
     }
 }
 
