--- a/04 Card/card.css
+++ b/04 Card/card.css
@@ -1,21 +1,27 @@
-article{
+.container{
     font-style:normal;
     display: flex;
     flex-direction: column;
     orientation: vertical;
-    padding: 15px;
-    font-size: 17px ;
+    max-width: 400px;
+    font-size: 24px ;
 }
 
-img{
-    
-        width: 100%;
-        height: auto;
-      
+img{   
+    width: 100%;
+    max-height: 300px;     
 }
-div{
+div.text{
     padding:10px;
     border: 1px solid grey;
-    width: 100%;
+    
+}
+div.image{
+    border-left: 1px solid grey;
+    border-right: 1px solid grey;
+    border-top: 1px solid grey;
 }
 
+a{
+    margin-right: 15px;
+}
