--- a/06 Nav/nav.css
+++ b/06 Nav/nav.css
@@ -16,7 +16,11 @@ nav{
     flex-direction: row;
     align-items: center;
     justify-content:space-between;
-    
+    width: 100%;
+    padding:2%;
+    margin: -1% -1% -1% -1%;
+    float: left;
+    overflow: auto;
     background-color: rgb(65, 59, 59);
     
 }
@@ -73,7 +77,7 @@ input{
 .search{
     margin-right: 20px;
 }
-@media(min-width:768px){
+@media(max-width:768px){
     .burgermenu{
         display:block;
     }
